# autismifier

./: .gitignore  Cargo.toml
src/: main.rs  messagereactor.rs  serenity.rs  textfetcher.rs  webserver.rs
