[package]
name = "autismifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current" }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tracing = "0.1.37"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current" }
